--- a/package/devel/perf/Makefile
+++ b/package/devel/perf/Makefile
@@ -51,6 +51,7 @@ MAKE_FLAGS = \
 	NO_LIBCRYPTO=1 \
 	NO_LIBUNWIND=1 \
 	NO_LIBCAP=1 \
+	NO_LIBZSTD=1 \
 	CROSS_COMPILE="$(TARGET_CROSS)" \
 	CC="$(TARGET_CC)" \
 	LD="$(TARGET_CROSS)ld" \
