x86: efi: add dualboot support for safe sysupgrades
We leverage grub2-editenv to keep track of boot attempts. We add
a counter with the number of boot attempts. Grub increases it each
time it boots. After 2 failed attempts, the alternate installation
is used.

This counter is then reset to 0 within the done init script.

Signed-off-by: Javier Marcet <javier@marcet.info>

--- a/config/Config-images.in
+++ b/config/Config-images.in
@@ -207,6 +207,7 @@ menu "Target Images"
 		depends on TARGET_x86
 		depends on TARGET_ROOTFS_EXT4FS || TARGET_ROOTFS_JFFS2 || TARGET_ROOTFS_SQUASHFS
 		select PACKAGE_grub2-efi
+		select PACKAGE_grub2-editenv
 		select PACKAGE_kmod-fs-ext4
 		select PACKAGE_kmod-fs-vfat
 		default y
